Support compilation with Maven on MacOSX
Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>